<resources>
    <string name="app_name">Financinhas</string>
    <string name="categoria">Categoria:</string>
    <string name="adicionar">Adicionar</string>
    <string name="descricao_despesa">Descrição</string>
    <string name="despesa">Despesa:</string>
    <string name="ok" translatable="false">OK</string>
    <string name="vencimento">Vencimento:</string>
    <string name="sair">Sair</string>
    <string name="excluir">Excluir</string>
    <string name="valor">Valor:</string>
</resources>