<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TelaContasAPagar">

    <TextView
        android:id="@+id/nomeCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:text="categoria"
        android:textSize="20sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="5sp"
    android:layout_marginEnd="5sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/despesa"
        android:textColor="#FF0000" />

    <EditText
        android:id="@+id/ed_descricao_despesa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/descricao_despesa"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="#FF0000" />

            <EditText
                android:id="@+id/ed_valor_despesa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vencimento"
                android:textColor="#FF0000" />

            <EditText
                android:id="@+id/ed_data_vencimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:minHeight="48dp"
                android:onClick="selecionarData" />
        </LinearLayout>

        <Button
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:onClick="adicionarDespesa"
            android:text="@string/ok" />

    </LinearLayout>

    <ListView
        android:id="@+id/lista_contas"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1" />

</LinearLayout>